--- a/CicadasCMS/CicadasCms/src/main/resources/templates/extend/advertise.html
+++ b/CicadasCMS/CicadasCms/src/main/resources/templates/extend/advertise.html
@@ -1,29 +1,43 @@
 <div class="bjui-pageHeader">
-    <form id="pagerForm" data-toggle="ajaxsearch" action="/sys/log" method="post">
-        <input type="hidden" name="pageSize" value="50">
-        <input type="hidden" name="pageCurrent" value="1">
+    <form id="pagerForm" data-toggle="ajaxsearch" action="${ctxPath}/extend/advertise" method="post">
+        <input type="hidden" name="pageSize" value="${model.pageSize!}">
+        <input type="hidden" name="pageCurrent" value="${model.pageNum!}">
         <div class="bjui-searchBar">
-            <label>  开始日期：</label><input type="text" data-toggle="datepicker" value="" name="startTime" class="form-control" size="12">&nbsp;-
-            <label>  截止日期：</label><input type="text" data-toggle="datepicker" value="" name="endTime" class="form-control" size="12">&nbsp;
+            <label>  开始日期：</label><input type="text" data-toggle="datepicker" value="${startTime!}" name="startTime" class="form-control" size="12">&nbsp;-
+            <label>  截止日期：</label><input type="text" data-toggle="datepicker" value="${endTime!}" name="endTime" class="form-control" size="12">&nbsp;
             <button type="submit" class="btn-default" data-icon="search">查询</button>&nbsp;
             <a class="btn btn-orange" href="javascript:;" data-toggle="reloadsearch" data-clear-query="true" data-icon="undo">清空查询</a>
-            <div class="pull-right">
-                <!--<button type="button" class="btn-blue" data-url="ajaxDone2.html?id={#bjui-selected}" data-toggle="doajax" data-confirm-msg="确定要删除选中项吗？" data-icon="remove" title="可以在控制台(network)查看被删除ID">删除选中行</button>&nbsp;-->
-                <div class="btn-group">
-                    <button type="button" class="btn-default dropdown-toggle" data-toggle="dropdown" data-icon="copy">复选框-批量操作<span class="caret"></span></button>
-                    <ul class="dropdown-menu right" role="menu">
-                        <li><a href="book1.xlsx" data-toggle="doexport" data-confirm-msg="确定要导出信息吗？">导出<span style="color: green;">当前</span></a></li>
-                        <li class="divider"></li>
-                        <li><a href="/sys/log/del" data-toggle="doajaxchecked" data-confirm-msg="确定要删除选中项吗？" data-idname="id" data-group="ids">删除选中</a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </form>
 </div>
 <div class="bjui-pageContent tableContent" style="top: 29px; bottom: 28px;">
-    <h1>扩展内容</h1>
+    <h1>扩展内容-示例</h1>
     <h5>参考：log_list.html进行开发即可</h5>
+    <table class="table table-bordered table-hover table-striped table-top" data-selected-multi="true">
+
+        <thead>
+        <tr>
+            <th align="center"  width="25">编号</th>
+            <th align="center"  width="300">名称</th>
+            <th align="center" width="50">性别</th>
+            <th align="center" width="50">手机号</th>
+            <th align="center"  width="20">微信</th>
+            <th align="center"  width="50">创建日期</th>
+        </tr>
+        </thead>
+        <tbody>
+        @for(item in model.list){
+        <tr data-id="${itemLP.index}">
+            <td align="center">${item.id!}</td>
+            <td align="left">${item.name!}</td>
+            <td align="center">${item.sex!}</td>
+            <td align="center">${item.mobile!}</td>
+            <td align="center">${item.weixin!}</td>
+            <td align="center">${item.gmtCreateTime,dateFormat="yyyy-MM-dd hh:mm:ss"}</td>
+        </tr>
+        @}
+        </tbody>
+    </table>
 </div>
 <div class="bjui-pageFooter">
     <div class="pages">
@@ -36,8 +50,8 @@
                 <option value="150">150</option>
             </select>
         </div>
-        <span>&nbsp;条，共 3370 条</span>
+        <span>&nbsp;条，共 ${model.total!} 条</span>
     </div>
-    <div class="pagination-box" data-toggle="pagination" data-total="3370" data-page-size="30" data-page-current="1">
+    <div class="pagination-box" data-toggle="pagination" data-total="${model.total!}" data-page-size="30" data-page-current="1">
     </div>
 </div>
