--- a/html-velocity-demo/src/main/resources/templates/home/index.html
+++ b/html-velocity-demo/src/main/resources/templates/home/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>首页</title>
+    #parse("common/head.html")
 </head>
 <body>
-
+<div>
+    <h1>HOME</h1>
+    <ul>
+        <li><a href="/new" target="_blank">新闻模板==首页</a></li>
+        <li><a href="/new/detail" target="_blank">新闻模板==详情</a></li>
+        <li><a href="/new" target="_blank"></a></li>
+    </ul>
+</div>
 </body>
+<script src="/script/home/index.js"></script>
 </html>
