新闻模板==首页

--- a/html-velocity-demo/src/main/resources/templates/common/head.html
+++ b/html-velocity-demo/src/main/resources/templates/common/head.html
@@ -1,4 +1,6 @@
+<link rel="stylesheet" href="/content/js/laypage/skin/laypage.css">
 <script src="/content/js/lib/jquery.js"></script>
 <script src="/content/js/lib/axios.min.js"></script>
+<script src="/content/js/laypage/laypage.js"></script>
 <script src="/content/js/lib/vue.js"></script>
 <script src="/content/js/lib/common.js"></script>
