--- a/html-velocity-demo/src/main/resources/templates/home/index.html
+++ b/html-velocity-demo/src/main/resources/templates/home/index.html
@@ -9,9 +9,9 @@
 <div>
     <h1>HOME</h1>
     <ul>
-        <li><a href="/new" target="_blank">新闻模板==首页</a></li>
+        <li><a href="/new?categoryId=181" target="_blank">新闻模板==首页</a></li>
         <li><a href="/new/detail?id=180" target="_blank">新闻模板==详情</a></li>
-        <li><a href="/new" target="_blank"></a></li>
+        <li><a href="#" target="_blank"></a></li>
     </ul>
 </div>
 </body>
